--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
