--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-dropdown": "^1.9.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
+    "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
