--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/austinxewell/CrystaDianePhotography/my-app",
+  "homepage": "https://austinxewell.github.io/CrystaDianePhotography/my-app",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
